[chore](config): Update head pic and github page

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lin Zijie"
-  avatar           : "20741693203562_.pic.jpg"
+  avatar           : "Me.png"
   bio              : "I am a current senior student of the Department of Computer Science and Technology, Beihang University(BUAA)"
   location         : "Beijing, China"
   employer         :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/Enqurance"
   google_plus      :
   keybase          :
   instagram        :
