--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lin Zijie"
-  avatar           : "Me.png"
+  avatar           : "images/Me.png"
   bio              : "I am a current senior student of the Department of Computer Science and Technology, Beihang University(BUAA)"
   location         : "Beijing, China"
   employer         :
